--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,6 +13,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/custom.js"></script>
+
+    {{#if stripePublishableKey}}
+      <script>
+        window.STRIPE_PUBLISHABLE_KEY = "{{stripePublishableKey}}";
+      </script>
+      <!-- Include Stripe JS library on necessary pages -->
+      <script src="https://js.stripe.com/v3/"></script>
+    {{/if}}
+    {{#if checkoutPage}}
+      <script type="text/javascript" src="/js/checkout.js"></script>
+    {{/if}}
+    {{#if successPage}}
+      <script type="text/javascript" src="/js/success.js"></script>
+    {{/if}}
   </head>
 
   <body>
