--- a/views/success.hbs
+++ b/views/success.hbs
@@ -7,7 +7,31 @@
   </div>
   <div class="mt-40 text-center">
     <div class="mt-20 text-center text-secondary border-placeholder">
-      Add details about the payment here!
+      <div class="container text-left">
+        <div class="row">
+          <div class="col">
+            <p id="message"></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <p>Total Amount:</p>
+          </div>
+          <div class="col">
+            <!-- Total amount will be added here -->
+            <p id="totalAmount"></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <p>Payment Intent ID:</p>
+          </div>
+          <div class="col">
+            <!-- Payment intent ID will be added here -->
+            <p id="paymentIntentID"></p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </main>
